--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,4 +1,11 @@
 ---
+// import Navigation from '../components/Navigation.astro';
+import Footer from '../components/Footer.astro';
+import Header from '../components/Header.astro';
+import BlogPost from '../components/BlogPost.astro';
+
+import '../styles/global.css';
+const allPosts = await Astro.glob('../pages/posts/*.md');
 ---
 
 <html lang="en">
@@ -10,11 +17,19 @@
 		<title>Astro</title>
 	</head>
 	<body>
-		<a href="/">ホーム</a>
-		<a href="/about/">概要</a>
-		<a href="/blog/">ブログ</a>
+		<Header />
 
 		<h1>私のAstro学習ブログ</h1>
 		<p>ここには、私がAstroを学んでいく旅の様子を投稿します。</p>
+
+		<ul>
+			{allPosts.map((post) => <BlogPost url={post.url} title={post.frontmatter.title} />)}
+
+		</ul>
+		<Footer />
+
+		<script>
+			import "../scripts/menu.js";
+		</script>
 	</body>
 </html>
